Add contacts api
