# src/types/user.ts
@@ -6,10 +6,10 @@ export interface IUser extends IBaseEntity {
   refresh_token: string;
 }
 
-export type IUserCreateProps = Pick<IUser, 'email' | 'name' | 'refresh_token'>;
+export type ICreateUserProps = Pick<IUser, 'email' | 'name' | 'refresh_token'>;
 
 export interface IUserCreateReq {
   authorization_code: string;
 }
 
-export type IUserGetRes = Pick<IUser, 'id' | 'email' | 'name' | 'created_at' | 'updated_at'>;
+export type IGetUserRes = Pick<IUser, 'id' | 'email' | 'name' | 'created_at' | 'updated_at'>;
